<resources>
    <string name="app_name">Drink Journal</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- List Viewer -->
    <string name="listViewName">Name: %s</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="rating_bar">Rating Bar</string>
    <string name="description">Drink Description</string>
    <string name="origin">Drink Origin</string>
    <string name="maker">Drink Maker</string>
    <string name="alcohol_percentage">Alcohol Percentage</string>
    <string name="specs">Drink Specifics</string>
    <string name="type">Drink Type</string>
    <string name="name">Drink Name</string>
    <string name="back">Back</string>
    <string name="refresh">Refresh</string>
    <string name="add_drink">Add Drink</string>
    <string name="new_drink">New Drink</string>
    <string name="my_journal">My Journal</string>
    <string name="settings">Settings</string>
    <string name="type_new_drink">Beer / Wine / Mixed Drink</string>
    <string name="specs_new_drink">Beer Style / Wine Style / Mixed Drink Liquor</string>
    <string name="description_new_drink">Drink Description or Recipe</string>
</resources>